# HoldSpeak

./: .gitignore  .guru_meditation.md  CHANGELOG.md  CLAUDE.md  CODEX_IDEAS.md  CONTRIBUTING.md  HANDOFF.md  HOLDSPEAK_REFACTORING.md  IDEAS.md  INTEGRATION_NOTES.md  LICENSE  PLAN_TEST_FRAMEWORK.md  README.md  TODO.md  demo.tape  hatch_build.py  pyproject.toml
.githooks/: commit-msg  dw  dw-mcp  dw-workbench  post-commit  pre-commit  work-log-read  work-log-summarize
.githooks/dw_pmo/: __init__.py  adopt.py  agentdocs.py  agenthooks.py  api.py  capabilities.py  contract.py  docslint.py  doctor.py  events.py  evidence.py  gate.py  gitio.py  launcher.py  manifest.py  mcpserver.py  model.py  mutations.py  parse.py  paths.py  render.py  riderdocs.py  sessions.py  statefeed.py  trace.py  validate.py  verify.py  workbench.py
.githooks/workbench/: app.js  index.html  style.css
.github/workflows/: gallery-pages.yml  holdspeak-mobile-ci.yml  release.yml  screenshots.yml  test.yml
.holdspeak/: blocks.yaml
aipi-lite/: .gitignore  IMPORT.md  README.md  aipi.yaml  ascii_zoo.yaml  bridge.env.example  holdspeak_proto.py  requirements-dev.txt  requirements.txt  ruff.toml  secrets.yaml.example
aipi-lite/bridge/: __init__.py  __main__.py  audio.py  cli.py  companion_gestures.py  companion_state.py  companion_status.py  device.py  holdspeak.py  lcd.py  logging_setup.py  reconnect.py  settings.py
aipi-lite/docs/: DEVICE_AUDIO_OUTPUT.md  HOLDSPEAK_BRIDGE.md  LCD_SYMBOLS.md  PROVISIONING.md
aipi-lite/scripts/: aipi-bridge.service
aipi-lite/tests/: test_audio.py  test_bookmark_gesture.py  test_companion_gestures.py  test_companion_state.py  test_companion_status.py  test_device_leg.py  test_device_methods.py  test_dispatch.py  test_holdspeak_leg.py  test_lcd_helpers.py  test_link_retrigger.py  test_models.py  test_protocol_sync.py  test_reconnect.py  test_remote_press.py  (+1 more)
apple/: .gitignore  ARCHITECTURE.md  Package.resolved  Package.swift  README.md
designer-handoff/: README.md  capture-screenshots.py  functional-handoff.md  screenshot-index.md  style-handoff.md  ux-inventory.md
docs/: ACTIVITY_PREBRIEFING.md  AGENT_HOOK_INSTALL.md  AIPI_LITE_DEV_WORKFLOW.md  API_SURFACE.md  ARCHITECTURE.md  AUTHORITY.md  CADENCE.md  CONNECTOR_DEVELOPMENT.md  CROSS_PLATFORM_ROADMAP.md  DESK_MEMORY.md  DEVICE_PROTOCOL.md  DICTATION_COPILOT.md  DICTATION_PIPELINE_GUIDE.md  FIREFOX_EXTENSION_GUIDE.md  GETTING_STARTED.md  INFERENCE_TARGETS.md  INTELLIGENT_TYPING_GUIDE.md  LINUX_PORT_EXECUTION.md  LINUX_PORT_PLAN.md  MEETING_MODE_GUIDE.md  MODELS.md  PLAN_ACTIVITY_ASSISTED_ENRICHMENT.md  PLAN_ARCHITECT_PLUGIN_SYSTEM.md  PLAN_INTEL_STREAMING.md  PLAN_MEETING_INTEL_PI.md  PLAN_MEETING_MODE.md  PLAN_MENU_BAR.md  PLAN_PHASE_DICTATION_INTENT_ROUTING.md  PLAN_PHASE_MULTI_INTENT_ROUTING.md  PLAN_PHASE_WEB_FLAGSHIP_RUNTIME.md  PLUGIN_AUTHORING.md  README.md  RELEASE_HARDENING_CHECKLIST.md  RELEASING.md  SECURITY.md  TUI_ARCHITECTURE_SPEC.md  TUI_INVENTORY.md  TUI_PROJECT_PLAN.md  TUI_ROADMAP.md  USER_GUIDE.md  (+8 more)
dogfood/: .gitignore  PROTOCOL.md  README.md  RESULTS-TEMPLATE.md  env.sh  hs  make_fixtures.py  make_fixtures.sh  setup.sh
dogfood/repos/ledgerline/: CHANGELOG.md  README.md  STAGES.md  pyproject.toml
dogfood/repos/ledgerline/.holdspeak/: blocks.yaml  project.yaml
dogfood/repos/ledgerline/.hs/: context.md  instructions.md  issues.md  memory.md  terms.md  workflows.md
dogfood/repos/ledgerline/docs/: POSTMORTEM-2026-04-double-post.md
dogfood/repos/ledgerline/docs/adr/: 0001-double-entry-ledger.md  0002-idempotency-keys.md
dogfood/repos/ledgerline/src/ledgerline/: __init__.py  ledger.py
dogfood/repos/ledgerline/src/ledgerline/api/: __init__.py  charges.py
dogfood/repos/ledgerline/src/ledgerline/db/: __init__.py  entries.py  idempotency.py
dogfood/repos/ledgerline/tests/: test_ledger.py
gallery/: index.html
holdspeak/: __init__.py  activity_candidates.py  activity_connector_preview.py  activity_connectors.py  activity_context.py  activity_entities.py  activity_extension.py  activity_github.py  activity_history.py  activity_jira.py  activity_mapping.py  activity_nudges.py  actuator_authority.py  agent_context.py  agent_device.py  agent_summarizer.py  artifacts.py  audio.py  audio_devices.py  cadence_telegram.py  coder_factory.py  coder_steering.py  coder_steering_relay.py  config.py  connector_fixtures.py  connector_pack_loader.py  connector_runtime.py  connector_sdk.py  controller.py  db.py  db_migration.py  desktop_presence.py  desktop_presence_cocoa.py  desktop_presence_freedesktop.py  desktop_presence_gtk.py  device_audio.py  device_audio_ws.py  device_meeting_stats.py  device_recording_tick.py  device_status.py  (+52 more)
scripts/: aipi_bridge.sh  aipi_firmware.sh  aipi_setup.sh  aipi_test.sh  desk_gl_walk.py  desktop_presence_shots.py  desktop_presence_smoke.py  dictation_enrichment_demo.py  dogfood_cockpit.py  dogfood_first_run.py  dogfood_journal.py  dogfood_learning_loop.py  dogfood_meeting_aftercare.py  dogfood_project_knowledge.py  dogfood_wizard.py  framework-sync-proof.sh  gen_api_surface.py  install.sh  journal_e2e_demo.py  judgment_census.py  linux_smoke.sh  mockup_census.py  phase70_closeout.py  phase70_tour.py  phase93_context_power_evidence.py  phase93_copy_census.py  phase93_desk_windows_evidence.py  phase93_dictation_fault_matrix_evidence.py  phase93_dictation_recovery_evidence.py  phase93_keyboard_walk_evidence.py  phase93_meeting_longrun.py  phase93_meeting_recovery_evidence.py  phase93_scale_evidence.py  phase93_workroom_evidence.py  phase94_audit_census.py  phase94_delivery_campaign.py  phase94_desk_delivery_evidence.py  presence_linux_overlay_smoke.py  presence_macos_smoke.py  proof_hsm15_mesh_hub.py  (+51 more)
tests/: conftest.py
uat/: .gitignore  AUTHORING.md  CHARTER.md  DEVICE-RUNBOOK.md  FUNCTIONAL-PASS.md  README.md  REVIEW-2026-07-09.md  TRIAGE.md  __init__.py  feature-additions.yaml  feature-targets.yaml  features.yaml  stage.py
web/: README.md  astro.config.mjs  design-tokens.json  index.html  package-lock.json  package.json  token-allowlist.json  vite.config.ts
(+4003 files in other folders)
