[project]
name = "holdspeak"
version = "0.2.0"
description = "Voice typing for macOS and Linux - hold a hotkey, speak, release. Local & private."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlx-whisper>=0.4.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "pynput>=1.7.6",
    "pyperclip>=1.8.2",
    "textual>=0.50.0",
]

[project.optional-dependencies]
linux = [
    "faster-whisper>=1.0.0",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-mock>=3.12",
    "pytest-timeout>=2.2",
    "httpx>=0.26",
]
menubar = [
    "rumps>=0.4.0; sys_platform == \"darwin\"",
]
meeting = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "llama-cpp-python>=0.2.0",
    "openai>=1.0.0",
    "resemblyzer>=0.1.3",
]
dev = [
    "playwright>=1.40.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-mock>=3.12",
    "pytest-timeout>=2.2",
    "httpx>=0.26",
    "ruff>=0.1.0",
    "scipy>=1.10.0",  # For reading WAV files in metal tests
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow-running",
    "requires_model: requires ML model to be loaded",
    "requires_macos: requires macOS system",
    "requires_meeting: requires optional meeting/web dependencies (e.g., fastapi)",
    "integration: integration test",
    "e2e: end-to-end test",
    "metal: hardware tests requiring real mic/model/keyboard (local only)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
addopts = ["--strict-markers", "-ra"]

[tool.coverage.run]
source = ["holdspeak"]
branch = true
omit = ["holdspeak/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
show_missing = true

[project.scripts]
holdspeak = "holdspeak.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
