[project]
name = "holdspeak"
version = "0.3.1"
description = "Voice typing for macOS and Linux - hold a hotkey, speak, release. Local & private."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "karolswdev", email = "karolsane@gmail.com" },
]
keywords = [
    "voice-typing",
    "dictation",
    "speech-to-text",
    "whisper",
    "transcription",
    "meeting",
    "local-first",
    "privacy",
    "llm",
    "macos",
    "linux",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Utilities",
]
dependencies = [
    "mlx-whisper>=0.4.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "pynput>=1.7.6",
    "pyperclip>=1.8.2",
    # Web runtime is the default `holdspeak` command, so its deps live in core.
    # `uvicorn[standard]` pulls in websockets/uvloop/httptools/watchfiles.
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    # DIR-01 dictation pipeline reads block configs from YAML.
    "PyYAML>=6.0",
    # Meeting import accepts multipart uploads (POST /api/meetings/import).
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
linux = [
    "faster-whisper>=1.0.0",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-mock>=3.12",
    "pytest-timeout>=2.2",
    "httpx>=0.26",
]
meeting = [
    "llama-cpp-python>=0.2.0",
    "openai>=1.0.0",
    "resemblyzer>=0.1.3",
    # HSM-15-10: LAN discovery — `holdspeak web` advertises `_holdspeak._tcp`
    # via Bonjour when bound off-loopback so a companion can find it by name.
    # Best-effort: the runtime degrades gracefully if this is absent.
    "zeroconf>=0.131.0",
]
wakeword = [
    # HS-60: the optional local wake-word engine (Apache-2.0; ONNX runtime).
    "openwakeword>=0.6.0",
]
dictation-llama = [
    "llama-cpp-python>=0.2.90",
]
dictation-mlx = [
    "mlx-lm>=0.19; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "outlines>=0.1.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
]
dictation-openai = [
    "openai>=1.0.0",
]
# HS-41-04: optional native desktop-presence renderer (Phase 41). Only needed
# when HOLDSPEAK_DESKTOP_PRESENCE=1; the runtime degrades to the web card when
# absent. macOS: a non-activating NSPanel hosting a WKWebView of /presence + an
# NSStatusItem glyph. (Linux notification/tray deps land with HS-41-05.)
presence = [
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-WebKit>=10.0; sys_platform == 'darwin'",
    # Linux (HS-41-05): notification (libnotify) + StatusNotifierItem tray via
    # PyGObject. The libnotify/AppIndicator typelibs are system packages
    # (e.g. gir1.2-notify-0.7, gir1.2-ayatanaappindicator3-0.1) — see the docs.
    "PyGObject>=3.44; sys_platform == 'linux'",
]
dev = [
    "playwright>=1.40.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-mock>=3.12",
    "pytest-timeout>=2.2",
    "httpx>=0.26",
    "ruff>=0.1.0",
    "scipy>=1.10.0",  # For reading WAV files in metal tests
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow-running",
    "requires_model: requires ML model to be loaded",
    "requires_macos: requires macOS system",
    "requires_meeting: requires optional meeting/web dependencies (e.g., fastapi)",
    "requires_mlx: requires the [dictation-mlx] extra and a loadable MLX Qwen model",
    "requires_llama_cpp: requires the [dictation-llama] extra and a loadable GGUF Qwen model",
    "integration: integration test",
    "e2e: end-to-end test",
    "metal: hardware tests requiring real mic/model/keyboard (local only)",
    "spoken_e2e: opt-in spoken-meeting e2e (say + Whisper + .43 LLM + Playwright; set HOLDSPEAK_SPOKEN_E2E=1)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
addopts = ["--strict-markers", "-ra"]

[tool.hatch.build.targets.sdist]
include = [
    "/LICENSE",
    "/README.md",
    "/hatch_build.py",
    "/holdspeak",
    "/pyproject.toml",
    "/scripts",
    "/web",
]
exclude = [
    "/holdspeak/**/__pycache__",
    "/web/.astro",
    "/web/dist",
    "/web/node_modules",
]

[tool.hatch.build.targets.wheel]
packages = ["holdspeak"]
artifacts = [
    "holdspeak/static/_built/**",
]

[tool.coverage.run]
source = ["holdspeak"]
branch = true
omit = ["holdspeak/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
show_missing = true

[project.urls]
Homepage = "https://github.com/karolswdev/HoldSpeak"
Repository = "https://github.com/karolswdev/HoldSpeak"
Issues = "https://github.com/karolswdev/HoldSpeak/issues"
Documentation = "https://github.com/karolswdev/HoldSpeak/tree/main/docs"

[project.scripts]
holdspeak = "holdspeak.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
